almost done; still proofing

--- a/polynoid_refs.bib
+++ b/polynoid_refs.bib
@@ -1,32 +1,16 @@
-@article{Abadi2019,
-abstract = {Determining the most suitable model for phylogeny reconstruction constitutes a fundamental step in numerous evolutionary studies. Over the years, various criteria for model selection have been proposed, leading to debate over which criterion is preferable. However, the necessity of this procedure has not been questioned to date. Here, we demonstrate that although incongruency regarding the selected model is frequent over empirical and simulated data, all criteria lead to very similar inferences. When topologies and ancestral sequence reconstruction are the desired output, choosing one criterion over another is not crucial. Moreover, skipping model selection and using instead the most parameter-rich model, GTR+I+G, leads to similar inferences, thus rendering this time-consuming step nonessential, at least under current strategies of model selection.},
-author = {Abadi, Shiran and Azouri, Dana and Pupko, Tal and Mayrose, Itay},
-doi = {10.1038/s41467-019-08822-w},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Abadi et al. - 2019 - Model selection may not be a mandatory step for phylogeny reconstruction.pdf:pdf},
-issn = {20411723},
-journal = {Nature Communications},
-number = {1},
-pmid = {30804347},
-publisher = {Springer US},
-title = {{Model selection may not be a mandatory step for phylogeny reconstruction}},
-url = {http://dx.doi.org/10.1038/s41467-019-08822-w},
-volume = {10},
-year = {2019}
-}
-@article{Felsenstein1981,
-abstract = {The application of maximum likelihood techniques to the estimation of evolutionary trees from nucleic acid sequence data is discussed. A computationally feasible method for finding such maximum likelihood estimates is developed, and a computer program is available. This method has advantages over the traditional parsimony algorithms, which can give misleading results if rates of evolution differ in different lineages. It also allows the testing of hypotheses about the constancy of evolutionary rates by likelihood ratio tests, and gives rough indication of the error of the estimate of the tree. {\textcopyright} 1981 Springer-Verlag.},
-author = {Felsenstein, Joseph},
-doi = {10.1007/BF01734359},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Felsenstein - 1981 - Evolutionary trees from DNA sequences A maximum likelihood approach.pdf:pdf},
-issn = {00222844},
-journal = {Journal of Molecular Evolution},
-keywords = {DNA sequences,Estimation,Evolution,Maximum likelihood,Parsimony,Phylogeny},
-number = {6},
-pages = {368--376},
-pmid = {7288891},
-title = {{Evolutionary trees from DNA sequences: A maximum likelihood approach}},
-volume = {17},
-year = {1981}
+@article{Hatch2020a,
+abstract = {Polynoidae Kinberg, 1856 has five branchiate genera: Branchipolynoe Pettibone, 1984, Branchinotogluma Pettibone, 1985, Branchiplicatus Pettibone, 1985, Peinaleopolynoe Desbruy{\`{e}}res {\&} Laubier, 1988, and Thermopolynoe Miura, 1994, all native to deep-sea, chemosynthetic-based habitats. Of these, Peinaleopoly-noe has two accepted species; Peinaleopolynoe sillardi Desbruy{\`{e}}res {\&} Laubier, 1988 (Atlantic Ocean) and Peinaleopolynoe santacatalina Pettibone, 1993 (East Pacific Ocean). The goal of this study was to assess the phylogenetic position of Peinaleopolynoe, utilizing DNA sequences from a broad sampling of deep-sea polynoids. Representatives from all five branchiate genera were included, several species of which were sampled from near the type localities; Branchinotogluma sandersi Pettibone, 1985 from the Gal{\'{a}}pagos Rift (E/V “Nautilus”); Peinaleopolynoe sillardi from organic remains in the Atlantic Ocean; Peinaleopolynoe san-tacatalina from a whalefall off southern California (R/V “Western Flyer”) and Thermopolynoe branchiata Miura, 1994 from Lau Back-Arc Basin in the western Pacific (R/V “Melville”). Phylogenetic analyses were conducted using mitochondrial (COI, 16S rRNA, and CytB) and nuclear (18S rRNA, 28S rRNA, and H3) genes. The analyses revealed four new Peinaleopolynoe species from the Pacific Ocean that are formally described here: Peinaleopolynoe orphanae Hatch {\&} Rouse, sp. nov., type locality Pescadero Basin in the Gulf of California, Mexico (R/V “Western Flyer”); Peinaleopolynoe elvisi Hatch {\&} Rouse, sp. nov. and Peinaleopolynoe goffrediae Hatch {\&} Rouse, sp. nov., both with a type locality in Monterey Canyon off California (R/V “Western Flyer”) and Peinaleopolynoe mineoi Hatch {\&} Rouse, sp. nov. from Costa Rica methane seeps (R/V “Falkor”). In addition to DNA sequence data, the monophyly of Peinaleopolynoe is supported by the presence of ventral papillae on segments 12–15. The results also demonstrated the para-phyly of Branchinotogluma and Lepidonotopodium Pettibone, 1983 and taxonomic revision of these genera is required. We apply the subfamily name Lepidonotopodinae Pettibone 1983, for the clade comprised of Branchipolynoe, Branchinotogluma, Bathykurila, Branchiplicatus, Lepidonotopodium, Levensteiniella Pet-tibone, 1985, Thermopolynoe, and Peinaleopolynoe.},
+author = {Hatch, Avery S. and Liew, Haebin and Hourdez, St{\'{e}}phane and Rouse, Greg W.},
+doi = {10.3897/zookeys.932.48532},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Hatch et al. - 2020 - Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species.pdf:pdf},
+issn = {13132970},
+journal = {ZooKeys},
+keywords = {Deep sea,Molecular phylogeny,Seeps,Systematics,Vents,Whalefalls},
+number = {932},
+pages = {27--74},
+title = {{Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species}},
+volume = {2020},
+year = {2020}
 }
 @article{Hatch2020a,
 abstract = {Polynoidae Kinberg, 1856 has five branchiate genera: Branchipolynoe Pettibone, 1984, Branchinotogluma Pettibone, 1985, Branchiplicatus Pettibone, 1985, Peinaleopolynoe Desbruy{\`{e}}res {\&} Laubier, 1988, and Thermopolynoe Miura, 1994, all native to deep-sea, chemosynthetic-based habitats. Of these, Peinaleopoly-noe has two accepted species; Peinaleopolynoe sillardi Desbruy{\`{e}}res {\&} Laubier, 1988 (Atlantic Ocean) and Peinaleopolynoe santacatalina Pettibone, 1993 (East Pacific Ocean). The goal of this study was to assess the phylogenetic position of Peinaleopolynoe, utilizing DNA sequences from a broad sampling of deep-sea polynoids. Representatives from all five branchiate genera were included, several species of which were sampled from near the type localities; Branchinotogluma sandersi Pettibone, 1985 from the Gal{\'{a}}pagos Rift (E/V “Nautilus”); Peinaleopolynoe sillardi from organic remains in the Atlantic Ocean; Peinaleopolynoe san-tacatalina from a whalefall off southern California (R/V “Western Flyer”) and Thermopolynoe branchiata Miura, 1994 from Lau Back-Arc Basin in the western Pacific (R/V “Melville”). Phylogenetic analyses were conducted using mitochondrial (COI, 16S rRNA, and CytB) and nuclear (18S rRNA, 28S rRNA, and H3) genes. The analyses revealed four new Peinaleopolynoe species from the Pacific Ocean that are formally described here: Peinaleopolynoe orphanae Hatch {\&} Rouse, sp. nov., type locality Pescadero Basin in the Gulf of California, Mexico (R/V “Western Flyer”); Peinaleopolynoe elvisi Hatch {\&} Rouse, sp. nov. and Peinaleopolynoe goffrediae Hatch {\&} Rouse, sp. nov., both with a type locality in Monterey Canyon off California (R/V “Western Flyer”) and Peinaleopolynoe mineoi Hatch {\&} Rouse, sp. nov. from Costa Rica methane seeps (R/V “Falkor”). In addition to DNA sequence data, the monophyly of Peinaleopolynoe is supported by the presence of ventral papillae on segments 12–15. The results also demonstrated the para-phyly of Branchinotogluma and Lepidonotopodium Pettibone, 1983 and taxonomic revision of these genera is required. We apply the subfamily name Lepidonotopodinae Pettibone 1983, for the clade comprised of Branchipolynoe, Branchinotogluma, Bathykurila, Branchiplicatus, Lepidonotopodium, Levensteiniella Pet-tibone, 1985, Thermopolynoe, and Peinaleopolynoe.},
@@ -35,7 +19,7 @@ doi = {10.3897/zookeys.932.48532},
 file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Hatch et al. - 2020 - Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species.pdf:pdf},
 issn = {13132970},
 journal = {ZooKeys},
-keywords = {,Deep sea,Molecular phylogeny,Seeps,Systematics,Vents,Whalefalls},
+keywords = {Deep sea,Molecular phylogeny,Seeps,Systematics,Vents,Whalefalls},
 number = {932},
 pages = {27--74},
 title = {{Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species}},
@@ -59,72 +43,6 @@ url = {http://dx.doi.org/10.1016/j.ympev.2012.07.002},
 volume = {65},
 year = {2012}
 }
-@book{Paradis2012,
-abstract = {Data simulation has a critical place in evolutionary biology. Because evolutionary patterns and processes unroll over long time spans, their simulations has become an important ingredient of evolutionary research [e.g., 8]. From a statistical inference point of view, it is necessary to simulate data to assess the statistical properties of hypothesis tests and parameter estimators. This practice still needs to be generalized: it is quite common to read papers describing new data analysis methods without presenting some simulation results in order to asses the bias and variance of the estimators, or the type I and II error rates of the test. On the other hand, the recent rise in uses of simulation procedures for statistical inference (e.g., Markov chains Monte Carlo) has emphasized the need for simulating data under a wide range of situations.},
-author = {Paradis, Emmanuel},
-doi = {10.1007/978-1-4614-1743-9_7},
-edition = {2nd},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Paradis - 2012 - Analysis of Phylogenetics and Evolution with R.pdf:pdf},
-isbn = {9781461417422},
-pages = {313--330},
-publisher = {Springer},
-title = {{Analysis of Phylogenetics and Evolution with R}},
-year = {2012}
-}
-@article{Posada2001,
-abstract = {Despite the relevant role of models of nucleotide substitution in$\backslash$nphylogenetics, choosing among different models remains a problem.$\backslash$nSeveral statistical methods for selecting the model that best fits the$\backslash$ndata at hand have been proposed, but their absolute and relative$\backslash$nperformance has not yet been characterized. In this study, we compare$\backslash$nunder various conditions the performance of different hierarchical and$\backslash$ndynamic likelihood ratio tests, and of Akaike and Bayesian information$\backslash$nmethods, for selecting best-fit models of nucleotide substitution. We$\backslash$nspecifically examine the role of the topology used to estimate the$\backslash$nlikelihood of the different models and the importance of the order in$\backslash$nwhich hypotheses are tested. We do this by simulating DNA sequences$\backslash$nunder a known model of nucleotide substitution and recording how often$\backslash$nthis true model is recovered by the different methods. Our results$\backslash$nsuggest that model selection is reasonably accurate and indicate that$\backslash$nsome likelihood ratio test methods perform overall better than the$\backslash$nAkaike or Bayesian information criteria. The tree used to estimate the$\backslash$nlikelihood scores does not influence model selection unless it is a$\backslash$nrandomly chosen tree. The order in which hypotheses are tested, and the$\backslash$ncomplexity of the initial model in the sequence of tests, influence$\backslash$nmodel selection in some cases. Model fitting in phylogenetics has been$\backslash$nsuggested for many years, yet many authors still arbitrarily choose$\backslash$ntheir models, often using the default models implemented in standard$\backslash$ncomputer programs for phylogenetic estimation. We show here that a$\backslash$nbest-fit model can be readily identified. Consequently, given the$\backslash$nrelevance of models, model fitting should be routine in any phylogenetic$\backslash$nanalysis that uses models of evolution.},
-author = {Posada, David and Crandall, Keith A.},
-doi = {10.1080/106351501750435121},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Posada, Crandall - 2001 - Selecting the Best-Fit Model of Nucleotide Substitution.pdf:pdf},
-issn = {10635157},
-journal = {Systematic Biology},
-number = {4},
-pages = {580--601},
-title = {{Selecting the Best-Fit Model of Nucleotide Substitution}},
-volume = {50},
-year = {2001}
-}
-@article{Salazar-Vallejo2015,
-abstract = {Among polychaetes, polynoids have the highest number of symbiotic species found living with a wide variety of marine invertebrates, including other polychaetes. Lepidasthenia Malmgren, 1867 and Lepidametria Webster, 1879 were regarded as synonyms but belong to different subfamilies, although both have species associated with thelepodid or terebellid polychaetes. In this contribution Lepidasthenia loboi sp. n. is described from several specimens associated with the thelepodid Thelepus antarcticus Kinberg, 1867, collected on a rocky shore near Puerto Madryn, Argentina. Lepidasthenia loboi sp. n. can be confused with L. esbelta Amaral {\&} Nonato, 1982 because both live with Thelepus, are of similar sizes with similar pigmentation patterns, and have giant neurochaetae. However, in L. loboi sp. n. all eyes are of the same size, cephalic and parapodial cirri are tapered and mucronate, the second pair of elytra is larger than the third, the ventral cirri arise at the base of parapodia such that they do not reach chaetal lobe tips, and neuraciculae are tapered. On the contrary, in L. esbelta the posterior eyes are larger than anterior ones, cephalic and parapodial appendages are swollen subdistally, the second and third pairs of elytra are of the same size, the ventral cirri arise medially such that their tips reach the neurochaetal lobe tips, and the neuraciculae have falcate tips. Some comments about other genera in the Lepidastheniinae, a simplified key to its genera, and a key to Lepidasthenia species with giant neurochaetae are also included.},
-author = {Salazar-Vallejo, Sergio I. and Gonz{\'{a}}lez, Norma Emilia and Salazar-Silva, Patricia},
-doi = {10.3897/zookeys.546.6175},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Salazar-Vallejo, Gonz{\'{a}}lez, Salazar-Silva - 2015 - Lepidasthenia loboi sp. n. from Puerto Madryn, Argentina (Polychaeta, Polynoidae).pdf:pdf},
-issn = {13132970},
-journal = {ZooKeys},
-keywords = {Giant chaetae,Lepidametria,Lepidastheniinae,Symbiosis,Terebellidae,Thelepodidae},
-number = {546},
-pages = {21--37},
-title = {{Lepidasthenia loboi sp. n. from Puerto Madryn, Argentina (Polychaeta, Polynoidae)}},
-volume = {2015},
-year = {2015}
-}
-@article{Schliep2011,
-abstract = {Summary: phangorn is a package for phylogenetic reconstruction and analysis in the R language. Previously it was only possible to estimate phylogenetic trees with distance methods in R. phangorn, now offers the possibility of reconstructing phylogenies with distance based methods, maximum parsimony or maximum likelihood (ML) and performing Hadamard conjugation. Extending the general ML framework, this package provides the possibility of estimating mixture and partition models. Furthermore, phangorn offers several functions for comparing trees, phylogenetic models or splits, simulating character data and performing congruence analyses. {\textcopyright} The Author(s) 2010. Published by Oxford University Press.},
-author = {Schliep, Klaus Peter},
-doi = {10.1093/bioinformatics/btq706},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Schliep - 2011 - phangorn Phylogenetic analysis in R.pdf:pdf},
-issn = {13674803},
-journal = {Bioinformatics},
-number = {4},
-pages = {592--593},
-pmid = {21169378},
-title = {{phangorn: Phylogenetic analysis in R}},
-volume = {27},
-year = {2011}
-}
-@article{Wright2016,
-abstract = {In recent years, the cost of DNA sequencing has decreased at a rate that has outpaced improvements in memory capacity. It is now common to collect or have access to many gigabytes of biological sequences. This has created an urgent need for approaches that analyze sequences in subsets without requiring all of the sequences to be loaded into memory at one time. It has also opened opportunities to improve the organization and accessibility of information acquired in sequencing projects. The DECIPHER package offers solutions to these problems by assisting in the curation of large sets of biological sequences stored in compressed format inside a database. This approach has many practical advantages over standard bioinformatics workflows, and enables large analyses that would otherwise be prohibitively time consuming.},
-author = {Wright, Erik S.},
-doi = {10.32614/rj-2016-025},
-file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Wright - 2016 - Using DECIPHER v2.0 to analyze big biological sequence data in R.pdf:pdf},
-issn = {20734859},
-journal = {R Journal},
-number = {1},
-pages = {352--359},
-title = {{Using DECIPHER v2.0 to analyze big biological sequence data in R}},
-volume = {8},
-year = {2016}
-}
 @article{Zhang2017a,
 abstract = {Polynoid scale worms (Polynoidae, Annelida) invaded deep-sea chemosynthesis-based ecosystems approximately 60 million years ago, but little is known about their genetic adaptation to the extreme deep-sea environment. In this study, we reported the first two transcriptomes of deep-sea polynoids (Branchipolynoe pettiboneae, Lepidonotopodium sp.) and compared them with the transcriptome of a shallow-water polynoid (Harmothoe imbricata). We determined codon and amino acid usage, positive selected genes, highly expressed genes and putative duplicated genes. Transcriptome assembly produced 98,806 to 225,709 contigs in the three species. There were more positively charged amino acids (i.e., histidine and arginine) and less negatively charged amino acids (i.e., aspartic acid and glutamic acid) in the deep-sea species. There were 120 genes showing clear evidence of positive selection. Among the 10{\%} most highly expressed genes, there were more hemoglobin genes with high expression levels in both deep-sea species. The duplicated genes related to DNA recombination and metabolism, and gene expression were only enriched in deep-sea species. Deep-sea scale worms adopted two strategies of adaptation to hypoxia in the chemosynthesis-based habitats (i.e., rapid evolution of tetra-domain hemoglobin in Branchipolynoe or high expression of single-domain hemoglobin in Lepidonotopodium sp.).},
 author = {Zhang, Yanjie and Sun, Jin and Chen, Chong and Watanabe, Hiromi K. and Feng, Dong and Zhang, Yu and Chiu, Jill M.Y. and Qian, Pei Yuan and Qiu, Jian Wen},
@@ -140,4 +58,153 @@ title = {{Adaptation and evolution of deep-sea scale worms (Annelida: Polynoidae
 url = {http://dx.doi.org/10.1038/srep46205},
 volume = {7},
 year = {2017}
+}
+@article{Salazar-Vallejo2015,
+abstract = {Among polychaetes, polynoids have the highest number of symbiotic species found living with a wide variety of marine invertebrates, including other polychaetes. Lepidasthenia Malmgren, 1867 and Lepidametria Webster, 1879 were regarded as synonyms but belong to different subfamilies, although both have species associated with thelepodid or terebellid polychaetes. In this contribution Lepidasthenia loboi sp. n. is described from several specimens associated with the thelepodid Thelepus antarcticus Kinberg, 1867, collected on a rocky shore near Puerto Madryn, Argentina. Lepidasthenia loboi sp. n. can be confused with L. esbelta Amaral {\&} Nonato, 1982 because both live with Thelepus, are of similar sizes with similar pigmentation patterns, and have giant neurochaetae. However, in L. loboi sp. n. all eyes are of the same size, cephalic and parapodial cirri are tapered and mucronate, the second pair of elytra is larger than the third, the ventral cirri arise at the base of parapodia such that they do not reach chaetal lobe tips, and neuraciculae are tapered. On the contrary, in L. esbelta the posterior eyes are larger than anterior ones, cephalic and parapodial appendages are swollen subdistally, the second and third pairs of elytra are of the same size, the ventral cirri arise medially such that their tips reach the neurochaetal lobe tips, and the neuraciculae have falcate tips. Some comments about other genera in the Lepidastheniinae, a simplified key to its genera, and a key to Lepidasthenia species with giant neurochaetae are also included.},
+author = {Salazar-Vallejo, Sergio I. and Gonz{\'{a}}lez, Norma Emilia and Salazar-Silva, Patricia},
+doi = {10.3897/zookeys.546.6175},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Salazar-Vallejo, Gonz{\'{a}}lez, Salazar-Silva - 2015 - Lepidasthenia loboi sp. n. from Puerto Madryn, Argentina (Polychaeta, Polynoidae).pdf:pdf},
+issn = {13132970},
+journal = {ZooKeys},
+keywords = {Giant chaetae,Lepidametria,Lepidastheniinae,Symbiosis,Terebellidae,Thelepodidae},
+number = {546},
+pages = {21--37},
+title = {{Lepidasthenia loboi sp. n. from Puerto Madryn, Argentina (Polychaeta, Polynoidae)}},
+volume = {2015},
+year = {2015}
+}
+@article{Felsenstein1981,
+abstract = {The application of maximum likelihood techniques to the estimation of evolutionary trees from nucleic acid sequence data is discussed. A computationally feasible method for finding such maximum likelihood estimates is developed, and a computer program is available. This method has advantages over the traditional parsimony algorithms, which can give misleading results if rates of evolution differ in different lineages. It also allows the testing of hypotheses about the constancy of evolutionary rates by likelihood ratio tests, and gives rough indication of the error of the estimate of the tree. {\textcopyright} 1981 Springer-Verlag.},
+author = {Felsenstein, Joseph},
+doi = {10.1007/BF01734359},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Felsenstein - 1981 - Evolutionary trees from DNA sequences A maximum likelihood approach.pdf:pdf},
+issn = {00222844},
+journal = {Journal of Molecular Evolution},
+keywords = {DNA sequences,Estimation,Evolution,Maximum likelihood,Parsimony,Phylogeny},
+number = {6},
+pages = {368--376},
+pmid = {7288891},
+title = {{Evolutionary trees from DNA sequences: A maximum likelihood approach}},
+volume = {17},
+year = {1981}
+}
+@article{Hatch2020a,
+abstract = {Polynoidae Kinberg, 1856 has five branchiate genera: Branchipolynoe Pettibone, 1984, Branchinotogluma Pettibone, 1985, Branchiplicatus Pettibone, 1985, Peinaleopolynoe Desbruy{\`{e}}res {\&} Laubier, 1988, and Thermopolynoe Miura, 1994, all native to deep-sea, chemosynthetic-based habitats. Of these, Peinaleopoly-noe has two accepted species; Peinaleopolynoe sillardi Desbruy{\`{e}}res {\&} Laubier, 1988 (Atlantic Ocean) and Peinaleopolynoe santacatalina Pettibone, 1993 (East Pacific Ocean). The goal of this study was to assess the phylogenetic position of Peinaleopolynoe, utilizing DNA sequences from a broad sampling of deep-sea polynoids. Representatives from all five branchiate genera were included, several species of which were sampled from near the type localities; Branchinotogluma sandersi Pettibone, 1985 from the Gal{\'{a}}pagos Rift (E/V “Nautilus”); Peinaleopolynoe sillardi from organic remains in the Atlantic Ocean; Peinaleopolynoe san-tacatalina from a whalefall off southern California (R/V “Western Flyer”) and Thermopolynoe branchiata Miura, 1994 from Lau Back-Arc Basin in the western Pacific (R/V “Melville”). Phylogenetic analyses were conducted using mitochondrial (COI, 16S rRNA, and CytB) and nuclear (18S rRNA, 28S rRNA, and H3) genes. The analyses revealed four new Peinaleopolynoe species from the Pacific Ocean that are formally described here: Peinaleopolynoe orphanae Hatch {\&} Rouse, sp. nov., type locality Pescadero Basin in the Gulf of California, Mexico (R/V “Western Flyer”); Peinaleopolynoe elvisi Hatch {\&} Rouse, sp. nov. and Peinaleopolynoe goffrediae Hatch {\&} Rouse, sp. nov., both with a type locality in Monterey Canyon off California (R/V “Western Flyer”) and Peinaleopolynoe mineoi Hatch {\&} Rouse, sp. nov. from Costa Rica methane seeps (R/V “Falkor”). In addition to DNA sequence data, the monophyly of Peinaleopolynoe is supported by the presence of ventral papillae on segments 12–15. The results also demonstrated the para-phyly of Branchinotogluma and Lepidonotopodium Pettibone, 1983 and taxonomic revision of these genera is required. We apply the subfamily name Lepidonotopodinae Pettibone 1983, for the clade comprised of Branchipolynoe, Branchinotogluma, Bathykurila, Branchiplicatus, Lepidonotopodium, Levensteiniella Pet-tibone, 1985, Thermopolynoe, and Peinaleopolynoe.},
+author = {Hatch, Avery S. and Liew, Haebin and Hourdez, St{\'{e}}phane and Rouse, Greg W.},
+doi = {10.3897/zookeys.932.48532},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Hatch et al. - 2020 - Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species.pdf:pdf},
+issn = {13132970},
+journal = {ZooKeys},
+keywords = {Deep sea,Molecular phylogeny,Seeps,Systematics,Vents,Whalefalls},
+number = {932},
+pages = {27--74},
+title = {{Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species}},
+volume = {2020},
+year = {2020}
+}
+@article{Schliep2011,
+abstract = {Summary: phangorn is a package for phylogenetic reconstruction and analysis in the R language. Previously it was only possible to estimate phylogenetic trees with distance methods in R. phangorn, now offers the possibility of reconstructing phylogenies with distance based methods, maximum parsimony or maximum likelihood (ML) and performing Hadamard conjugation. Extending the general ML framework, this package provides the possibility of estimating mixture and partition models. Furthermore, phangorn offers several functions for comparing trees, phylogenetic models or splits, simulating character data and performing congruence analyses. {\textcopyright} The Author(s) 2010. Published by Oxford University Press.},
+author = {Schliep, Klaus Peter},
+doi = {10.1093/bioinformatics/btq706},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Schliep - 2011 - phangorn Phylogenetic analysis in R.pdf:pdf},
+issn = {13674803},
+journal = {Bioinformatics},
+number = {4},
+pages = {592--593},
+pmid = {21169378},
+title = {{phangorn: Phylogenetic analysis in R}},
+volume = {27},
+year = {2011}
+}
+@article{Hatch2020a,
+abstract = {Polynoidae Kinberg, 1856 has five branchiate genera: Branchipolynoe Pettibone, 1984, Branchinotogluma Pettibone, 1985, Branchiplicatus Pettibone, 1985, Peinaleopolynoe Desbruy{\`{e}}res {\&} Laubier, 1988, and Thermopolynoe Miura, 1994, all native to deep-sea, chemosynthetic-based habitats. Of these, Peinaleopoly-noe has two accepted species; Peinaleopolynoe sillardi Desbruy{\`{e}}res {\&} Laubier, 1988 (Atlantic Ocean) and Peinaleopolynoe santacatalina Pettibone, 1993 (East Pacific Ocean). The goal of this study was to assess the phylogenetic position of Peinaleopolynoe, utilizing DNA sequences from a broad sampling of deep-sea polynoids. Representatives from all five branchiate genera were included, several species of which were sampled from near the type localities; Branchinotogluma sandersi Pettibone, 1985 from the Gal{\'{a}}pagos Rift (E/V “Nautilus”); Peinaleopolynoe sillardi from organic remains in the Atlantic Ocean; Peinaleopolynoe san-tacatalina from a whalefall off southern California (R/V “Western Flyer”) and Thermopolynoe branchiata Miura, 1994 from Lau Back-Arc Basin in the western Pacific (R/V “Melville”). Phylogenetic analyses were conducted using mitochondrial (COI, 16S rRNA, and CytB) and nuclear (18S rRNA, 28S rRNA, and H3) genes. The analyses revealed four new Peinaleopolynoe species from the Pacific Ocean that are formally described here: Peinaleopolynoe orphanae Hatch {\&} Rouse, sp. nov., type locality Pescadero Basin in the Gulf of California, Mexico (R/V “Western Flyer”); Peinaleopolynoe elvisi Hatch {\&} Rouse, sp. nov. and Peinaleopolynoe goffrediae Hatch {\&} Rouse, sp. nov., both with a type locality in Monterey Canyon off California (R/V “Western Flyer”) and Peinaleopolynoe mineoi Hatch {\&} Rouse, sp. nov. from Costa Rica methane seeps (R/V “Falkor”). In addition to DNA sequence data, the monophyly of Peinaleopolynoe is supported by the presence of ventral papillae on segments 12–15. The results also demonstrated the para-phyly of Branchinotogluma and Lepidonotopodium Pettibone, 1983 and taxonomic revision of these genera is required. We apply the subfamily name Lepidonotopodinae Pettibone 1983, for the clade comprised of Branchipolynoe, Branchinotogluma, Bathykurila, Branchiplicatus, Lepidonotopodium, Levensteiniella Pet-tibone, 1985, Thermopolynoe, and Peinaleopolynoe.},
+author = {Hatch, Avery S. and Liew, Haebin and Hourdez, St{\'{e}}phane and Rouse, Greg W.},
+doi = {10.3897/zookeys.932.48532},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Hatch et al. - 2020 - Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species.pdf:pdf},
+issn = {13132970},
+journal = {ZooKeys},
+keywords = {,Deep sea,Molecular phylogeny,Seeps,Systematics,Vents,Whalefalls},
+number = {932},
+pages = {27--74},
+title = {{Hungry scale worms phylogenetics of peinaleopolynoe (Polynoidae, annelida), with four new species}},
+volume = {2020},
+year = {2020}
+}
+@article{Gerth2019,
+abstract = {Molecular phylogenetics is a standard tool in modern biology that informs the evolutionary history of genes, organisms, and traits, and as such is important in a wide range of disciplines from medicine to palaeontology. Maximum likelihood phylogenetic reconstruction involves assumptions about the evolutionary processes that underlie the dataset to be analysed. These assumptions must be specified in forms of an evolutionary model, and a number of criteria may be used to identify the best-fitting from a plethora of available models of DNA evolution. Using many empirical and simulated nucleotide sequence alignments, Abadi et al.1 have recently found that phylogenetic inferences using best models identified by six different model selection criteria are, on average, very similar to each other. They further claimed that using the model GTR+I+G4 without prior model-fitting results in similarly accurate phylogenetic estimates, and consequently that skipping model selection entirely has no negative impact on many phylogenetic applications. Focussing on this claim, I here revisit and re-analyse some of the data put forward by Abadi et al. I argue that while the presented analyses are sound, the results are misrepresented and in fact - in line with previous work - demonstrate that model selection consistently leads to different phylogenetic estimates compared with using fixed models.},
+author = {Gerth, Michael},
+doi = {10.1101/849018},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Gerth - 2019 - Neglecting model selection alters phylogenetic inference.pdf:pdf},
+journal = {bioRxiv},
+pages = {1--7},
+title = {{Neglecting model selection alters phylogenetic inference}},
+year = {2019}
+}
+@article{Abadi2019,
+abstract = {Determining the most suitable model for phylogeny reconstruction constitutes a fundamental step in numerous evolutionary studies. Over the years, various criteria for model selection have been proposed, leading to debate over which criterion is preferable. However, the necessity of this procedure has not been questioned to date. Here, we demonstrate that although incongruency regarding the selected model is frequent over empirical and simulated data, all criteria lead to very similar inferences. When topologies and ancestral sequence reconstruction are the desired output, choosing one criterion over another is not crucial. Moreover, skipping model selection and using instead the most parameter-rich model, GTR+I+G, leads to similar inferences, thus rendering this time-consuming step nonessential, at least under current strategies of model selection.},
+author = {Abadi, Shiran and Azouri, Dana and Pupko, Tal and Mayrose, Itay},
+doi = {10.1038/s41467-019-08822-w},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Abadi et al. - 2019 - Model selection may not be a mandatory step for phylogeny reconstruction.pdf:pdf},
+issn = {20411723},
+journal = {Nature Communications},
+number = {1},
+pmid = {30804347},
+publisher = {Springer US},
+title = {{Model selection may not be a mandatory step for phylogeny reconstruction}},
+url = {http://dx.doi.org/10.1038/s41467-019-08822-w},
+volume = {10},
+year = {2019}
+}
+@article{Posada2001,
+abstract = {Despite the relevant role of models of nucleotide substitution in$\backslash$nphylogenetics, choosing among different models remains a problem.$\backslash$nSeveral statistical methods for selecting the model that best fits the$\backslash$ndata at hand have been proposed, but their absolute and relative$\backslash$nperformance has not yet been characterized. In this study, we compare$\backslash$nunder various conditions the performance of different hierarchical and$\backslash$ndynamic likelihood ratio tests, and of Akaike and Bayesian information$\backslash$nmethods, for selecting best-fit models of nucleotide substitution. We$\backslash$nspecifically examine the role of the topology used to estimate the$\backslash$nlikelihood of the different models and the importance of the order in$\backslash$nwhich hypotheses are tested. We do this by simulating DNA sequences$\backslash$nunder a known model of nucleotide substitution and recording how often$\backslash$nthis true model is recovered by the different methods. Our results$\backslash$nsuggest that model selection is reasonably accurate and indicate that$\backslash$nsome likelihood ratio test methods perform overall better than the$\backslash$nAkaike or Bayesian information criteria. The tree used to estimate the$\backslash$nlikelihood scores does not influence model selection unless it is a$\backslash$nrandomly chosen tree. The order in which hypotheses are tested, and the$\backslash$ncomplexity of the initial model in the sequence of tests, influence$\backslash$nmodel selection in some cases. Model fitting in phylogenetics has been$\backslash$nsuggested for many years, yet many authors still arbitrarily choose$\backslash$ntheir models, often using the default models implemented in standard$\backslash$ncomputer programs for phylogenetic estimation. We show here that a$\backslash$nbest-fit model can be readily identified. Consequently, given the$\backslash$nrelevance of models, model fitting should be routine in any phylogenetic$\backslash$nanalysis that uses models of evolution.},
+author = {Posada, David and Crandall, Keith A.},
+doi = {10.1080/106351501750435121},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Posada, Crandall - 2001 - Selecting the Best-Fit Model of Nucleotide Substitution.pdf:pdf},
+issn = {10635157},
+journal = {Systematic Biology},
+number = {4},
+pages = {580--601},
+title = {{Selecting the Best-Fit Model of Nucleotide Substitution}},
+volume = {50},
+year = {2001}
+}
+@article{Posada2008,
+abstract = {jModelTest is a new program for the statistical selection of models of nucleotide substitution based on "Phyml" (Guindon and Gascuel 2003. A simple, fast, and accurate algorithm to estimate large phylogenies by maximum likelihood. Syst Biol. 52:696-704.). It implements 5 different selection strategies, including "hierarchical and dynamical likelihood ratio tests," the "Akaike information criterion," the "Bayesian information criterion," and a "decision-theoretic performance- based" approach. This program also calculates the relative importance and model-averaged estimates of substitution parameters, including a model-averaged estimate of the phylogeny. jModelTest is written in Java and runs under Mac OSX, Windows, and Unix systems with a Java Runtime Environment installed. The program, including documentation, can be freely downloaded from the software section at http://darwin.uvigo.es. {\textcopyright} The Author 2008. Published by Oxford University Press on behalf of the Society for Molecular Biology and Evolution. All rights reserved.},
+author = {Posada, David},
+doi = {10.1093/molbev/msn083},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Posada - 2008 - jModelTest Phylogenetic model averaging.pdf:pdf},
+issn = {07374038},
+journal = {Molecular Biology and Evolution},
+keywords = {AIC,BIC,Likelihood ratio tests,Model selection,Performance-based selection,Statistical phylogenetics},
+number = {7},
+pages = {1253--1256},
+pmid = {18397919},
+title = {{jModelTest: Phylogenetic model averaging}},
+volume = {25},
+year = {2008}
+}
+@book{Paradis2012,
+abstract = {Data simulation has a critical place in evolutionary biology. Because evolutionary patterns and processes unroll over long time spans, their simulations has become an important ingredient of evolutionary research [e.g., 8]. From a statistical inference point of view, it is necessary to simulate data to assess the statistical properties of hypothesis tests and parameter estimators. This practice still needs to be generalized: it is quite common to read papers describing new data analysis methods without presenting some simulation results in order to asses the bias and variance of the estimators, or the type I and II error rates of the test. On the other hand, the recent rise in uses of simulation procedures for statistical inference (e.g., Markov chains Monte Carlo) has emphasized the need for simulating data under a wide range of situations.},
+author = {Paradis, Emmanuel},
+doi = {10.1007/978-1-4614-1743-9_7},
+edition = {2nd},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Paradis - 2012 - Analysis of Phylogenetics and Evolution with R.pdf:pdf},
+isbn = {9781461417422},
+pages = {313--330},
+publisher = {Springer},
+title = {{Analysis of Phylogenetics and Evolution with R}},
+year = {2012}
+}
+@article{Wright2016,
+abstract = {In recent years, the cost of DNA sequencing has decreased at a rate that has outpaced improvements in memory capacity. It is now common to collect or have access to many gigabytes of biological sequences. This has created an urgent need for approaches that analyze sequences in subsets without requiring all of the sequences to be loaded into memory at one time. It has also opened opportunities to improve the organization and accessibility of information acquired in sequencing projects. The DECIPHER package offers solutions to these problems by assisting in the curation of large sets of biological sequences stored in compressed format inside a database. This approach has many practical advantages over standard bioinformatics workflows, and enables large analyses that would otherwise be prohibitively time consuming.},
+author = {Wright, Erik S.},
+doi = {10.32614/rj-2016-025},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Wright - 2016 - Using DECIPHER v2.0 to analyze big biological sequence data in R.pdf:pdf},
+issn = {20734859},
+journal = {R Journal},
+number = {1},
+pages = {352--359},
+title = {{Using DECIPHER v2.0 to analyze big biological sequence data in R}},
+volume = {8},
+year = {2016}
 }
